name:                WebsocketPool
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WebsocketPool#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yesod.WebsocketPool
  other-modules:       Yesod.WebsocketPool.Types
                     , Yesod.WebsocketPool.Subsite
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , aeson >= 1.1.1.0
                     , websockets >= 0.10.0.0
                     , classy-prelude-conduit >= 1.2.0
                     , yesod-websockets >= 0.2.6
                     , yesod >= 1.4.5
                     , classy-prelude >= 1.2.0.1
                     , bytestring >= 0.10.8.1
                     , shakespeare >= 2.0.12.1
  default-language:    Haskell2010

test-suite WebsocketPool-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WebsocketPool
                     , containers >= 0.5.7.1
                     , aeson >= 1.1.1.0
                     , websockets >= 0.10.0.0
                     , classy-prelude-conduit >= 1.2.0
                     , yesod-websockets >= 0.2.6
                     , yesod >= 1.4.5
                     , classy-prelude >= 1.2.0.1
                     , bytestring >= 0.10.8.1
                     , shakespeare >= 2.0.12.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/WebsocketPool
